log/build_2025-10-21_15-00-04/real_gauge_detector/stdout_stderr.log
running egg_info
writing ../../build/real_gauge_detector/real_gauge_detector.egg-info/PKG-INFO
writing dependency_links to ../../build/real_gauge_detector/real_gauge_detector.egg-info/dependency_links.txt
writing entry points to ../../build/real_gauge_detector/real_gauge_detector.egg-info/entry_points.txt
writing requirements to ../../build/real_gauge_detector/real_gauge_detector.egg-info/requires.txt
writing top-level names to ../../build/real_gauge_detector/real_gauge_detector.egg-info/top_level.txt
reading manifest file '../../build/real_gauge_detector/real_gauge_detector.egg-info/SOURCES.txt'
writing manifest file '../../build/real_gauge_detector/real_gauge_detector.egg-info/SOURCES.txt'
running build
running build_py
copying real_gauge_detector/real_gauge_detector.py -> /home/jazzy/cv_ws/build/real_gauge_detector/build/lib/real_gauge_detector
running install
running install_lib
copying /home/jazzy/cv_ws/build/real_gauge_detector/build/lib/real_gauge_detector/real_gauge_detector.py -> /home/jazzy/cv_ws/install/real_gauge_detector/lib/python3.12/site-packages/real_gauge_detector
byte-compiling /home/jazzy/cv_ws/install/real_gauge_detector/lib/python3.12/site-packages/real_gauge_detector/real_gauge_detector.py to real_gauge_detector.cpython-312.pyc
  File "/home/jazzy/cv_ws/install/real_gauge_detector/lib/python3.12/site-packages/real_gauge_detector/real_gauge_detector.py", line 93
    cv2.putText(frame, "Manometr finded, 
                       ^
SyntaxError: unterminated string literal (detected at line 93)

running install_data
running install_egg_info
removing '/home/jazzy/cv_ws/install/real_gauge_detector/lib/python3.12/site-packages/real_gauge_detector-0.0.0-py3.12.egg-info' (and everything under it)
Copying ../../build/real_gauge_detector/real_gauge_detector.egg-info to /home/jazzy/cv_ws/install/real_gauge_detector/lib/python3.12/site-packages/real_gauge_detector-0.0.0-py3.12.egg-info
running install_scripts
Installing real_gauge_detector script to /home/jazzy/cv_ws/install/real_gauge_detector/lib/real_gauge_detector
writing list of installed files to '/home/jazzy/cv_ws/build/real_gauge_detector/install.log'
